// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated example output snapshots > matches snapshot for api-error.ts > api-error.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

function extractApiErrorMessage(
  status: number,
  statusText: string,
  body: unknown
): string {
  if (body === null || body === undefined) {
    return \`HTTP \${status}\${statusText ? ': ' + statusText : ''}\`;
  }

  if (typeof body === 'string') {
    return body.length > 0
      ? body
      : \`HTTP \${status}\${statusText ? ': ' + statusText : ''}\`;
  }

  if (typeof body === 'object') {
    const b = body as Record<string, unknown>;

    // NestJS: { message: string | string[], error, statusCode }
    const message = b['message'];
    if (typeof message === 'string' && message.length > 0) {
      return message;
    }
    if (Array.isArray(message) && message.length > 0) {
      return message.map((m) => String(m)).join(', ');
    }

    // FastAPI / generic: { detail: string | { msg }[] }
    // (RFC 7807 Problem Details with a title field is handled below to produce
    // a richer "title: detail" message.)
    const detail = b['detail'];
    if (
      typeof detail === 'string' &&
      detail.length > 0 &&
      typeof b['title'] !== 'string'
    ) {
      return detail;
    }
    if (Array.isArray(detail) && detail.length > 0) {
      const first = detail[0];
      if (first && typeof first === 'object' && 'msg' in first) {
        return String((first as Record<string, unknown>)['msg']);
      }
      return String(detail[0]);
    }

    // Express validator / generic: { errors: [{ msg }] }
    const errors = b['errors'];
    if (Array.isArray(errors) && errors.length > 0) {
      const first = errors[0];
      if (first && typeof first === 'object' && 'msg' in first) {
        return String((first as Record<string, unknown>)['msg']);
      }
      return String(first);
    }

    // RFC 7807 Problem Details: { title, detail }
    const problemDetail = b['detail'];
    if (typeof problemDetail === 'string' && problemDetail.length > 0) {
      const title =
        typeof b['title'] === 'string' ? (b['title'] as string) : '';
      return title ? \`\${title}: \${problemDetail}\` : problemDetail;
    }
    const problemTitle = b['title'];
    if (typeof problemTitle === 'string' && problemTitle.length > 0) {
      return problemTitle;
    }

    // Generic { error: string }
    const errorField = b['error'];
    if (typeof errorField === 'string' && errorField.length > 0) {
      return errorField;
    }
  }

  return \`HTTP \${status}\${statusText ? ': ' + statusText : ''}\`;
}

/**
 * Error thrown for non-2xx HTTP responses. Extends \`Error\` so Angular's
 * \`resource()\` (and native try/catch handlers) treat it as a real error
 * instead of wrapping it in "Resource returned an error that's not an Error
 * instance: [object Object]".
 *
 * The original response body is preserved on \`body\`, and the HTTP status /
 * statusText / headers are available for structured error handling.
 */
export class ApiError extends Error {
  readonly status: number;
  readonly statusText: string;
  readonly body: unknown;
  readonly headers: Headers;

  constructor(
    status: number,
    statusText: string,
    body: unknown,
    headers: Headers
  ) {
    super(extractApiErrorMessage(status, statusText, body));
    this.name = 'ApiError';
    this.status = status;
    this.statusText = statusText;
    this.body = body;
    this.headers = headers;
  }
}

export async function toApiError(response: Response): Promise<ApiError> {
  let body: unknown = null;

  try {
    const contentType = response.headers.get('content-type');

    if (contentType?.includes('json')) {
      body = await response.json();
    } else {
      body = await response.text();
    }
  } catch {
    body = null;
  }

  return new ApiError(
    response.status,
    response.statusText,
    body,
    response.headers
  );
}
"
`;

exports[`generated example output snapshots > matches snapshot for api-fetch-client.ts > api-fetch-client.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import { Service, inject } from '@angular/core';
import { transformDates } from './date-utils';
import {
  NG_OPENAPI_SIGNALS_BASE_PATH,
  NG_OPENAPI_SIGNALS_MIDDLEWARE,
  NG_OPENAPI_SIGNALS_AUTH,
  NG_OPENAPI_SIGNALS_DEFAULT_HEADERS,
  NG_OPENAPI_SIGNALS_ERROR_MAPPER,
  NG_OPENAPI_SIGNALS_REQUEST_HOOK,
  NG_OPENAPI_SIGNALS_RESPONSE_HOOK,
  type ApiRequestContext
} from './providers';

/**
 * Query parameter serialization metadata for non-default styles.
 *
 * When a query parameter uses a non-default OpenAPI style/explode, the
 * generated code wraps the value with this metadata so the runtime can
 * serialize it correctly.
 */
export interface QueryParamOptions {
  value: unknown;
  style: 'form' | 'spaceDelimited' | 'pipeDelimited' | 'deepObject';
  explode: boolean;
}

export interface ApiRequestOptions {
  method: string;
  path: string;
  query?: Record<string, unknown | QueryParamOptions>;
  headers?: Record<string, string | undefined>;
  body?: unknown;
  /**
   * Form data object for multipart/form-data or application/x-www-form-urlencoded.
   * The runtime converts this to FormData or URLSearchParams respectively.
   * When set, takes precedence over \`body\`.
   */
  formData?: object;
  /**
   * Explicit Content-Type for the request body. When omitted, the runtime
   * defaults to 'application/json' for JSON bodies. For FormData, the
   * Content-Type is set automatically by the browser (multipart boundary).
   */
  contentType?: string;
  signal?: AbortSignal | undefined;
  responseType?: 'json' | 'text' | 'blob' | 'arrayBuffer' | 'stream';
}

@Service()
export class ApiFetchClient {
  private readonly baseUrl = inject(NG_OPENAPI_SIGNALS_BASE_PATH);
  private readonly middleware =
    inject(NG_OPENAPI_SIGNALS_MIDDLEWARE, { optional: true }) ?? [];
  private readonly auth = inject(NG_OPENAPI_SIGNALS_AUTH, { optional: true });
  private readonly defaultHeaders = inject(NG_OPENAPI_SIGNALS_DEFAULT_HEADERS);
  private readonly errorMapper = inject(NG_OPENAPI_SIGNALS_ERROR_MAPPER);
  private readonly onRequest = inject(NG_OPENAPI_SIGNALS_REQUEST_HOOK, {
    optional: true
  });
  private readonly onResponse = inject(NG_OPENAPI_SIGNALS_RESPONSE_HOOK, {
    optional: true
  });

  async request<T>(options: ApiRequestOptions): Promise<T> {
    const url = this.buildUrl(options.path, options.query);

    const authHeaders = this.auth ? await this.auth() : {};

    // Build the request body and determine Content-Type.
    const { body, contentType } = this.prepareBody(options);

    const headers: Record<string, string> = {
      Accept: 'application/json',
      ...this.defaultHeaders,
      ...authHeaders,
      ...(contentType ? { 'Content-Type': contentType } : {}),
      ...this.stripUndefinedHeaders(options.headers)
    };

    const init: RequestInit = {
      method: options.method,
      signal: options.signal ?? null,
      headers,
      ...(body !== undefined ? { body } : {})
    };

    const context: ApiRequestContext = { url, init };

    if (this.onRequest) {
      await this.onRequest(context);
    }

    const coreFetch = async (): Promise<Response> =>
      fetch(context.url, context.init);

    const pipeline = this.middleware.reduceRight<() => Promise<Response>>(
      (next, mw) => async () =>
        typeof mw === 'function' ? mw(context, next) : mw.handle(context, next),
      coreFetch
    );

    const response = await pipeline();

    if (!response.ok) {
      throw await this.errorMapper(response);
    }

    if (this.onResponse) {
      // Pass a clone so the hook can inspect the body without consuming the
      // original stream (which parseBody needs to read afterwards).
      await this.onResponse(response.clone());
    }

    if (response.status === 204) {
      return undefined as unknown as T;
    }

    return (await this.parseBody(response, options.responseType)) as T;
  }

  /**
   * Removes headers with \`undefined\` values so they are not sent.
   * Optional header parameters may resolve to \`undefined\` when omitted.
   */
  private stripUndefinedHeaders(
    headers: Record<string, string | undefined> | undefined
  ): Record<string, string> {
    if (!headers) {
      return {};
    }
    const result: Record<string, string> = {};
    for (const [key, value] of Object.entries(headers)) {
      if (value !== undefined) {
        result[key] = value;
      }
    }
    return result;
  }

  /**
   * Prepares the request body and determines the Content-Type.
   *
   * - FormData objects: builds FormData from the object, lets the browser
   *   set the multipart boundary (no explicit Content-Type).
   * - URLSearchParams: builds from the object for form-urlencoded.
   * - Blob/ArrayBuffer: passes through with the provided contentType.
   * - Plain objects: JSON.stringify with 'application/json'.
   */
  private prepareBody(options: ApiRequestOptions): {
    body: BodyInit | undefined;
    contentType: string | undefined;
  } {
    // FormData takes precedence over body.
    if (options.formData !== undefined) {
      // For application/x-www-form-urlencoded, build URLSearchParams.
      // For multipart/form-data, build FormData and let the browser set the boundary.
      if (options.contentType === 'application/x-www-form-urlencoded') {
        const params = new URLSearchParams();
        for (const [key, value] of Object.entries(options.formData)) {
          if (value !== undefined && value !== null) {
            params.append(key, String(value));
          }
        }
        return {
          body: params.toString(),
          contentType: 'application/x-www-form-urlencoded'
        };
      }
      const formData = new FormData();
      for (const [key, value] of Object.entries(options.formData)) {
        if (value === undefined || value === null) {
          continue;
        }
        if (value instanceof Blob) {
          formData.append(key, value);
        } else {
          formData.append(key, String(value));
        }
      }
      return { body: formData, contentType: undefined };
    }

    if (options.body !== undefined && options.body !== null) {
      // Pass through FormData, Blob, ArrayBuffer, URLSearchParams, ReadableStream.
      if (
        options.body instanceof FormData ||
        options.body instanceof Blob ||
        options.body instanceof ArrayBuffer ||
        options.body instanceof URLSearchParams ||
        (typeof ReadableStream !== 'undefined' &&
          options.body instanceof ReadableStream)
      ) {
        return {
          body: options.body as BodyInit,
          contentType: options.contentType
        };
      }
      // Default: JSON.stringify.
      return {
        body: JSON.stringify(options.body),
        contentType: options.contentType ?? 'application/json'
      };
    }

    return { body: undefined, contentType: undefined };
  }

  private async parseBody(
    response: Response,
    responseType?: 'json' | 'text' | 'blob' | 'arrayBuffer' | 'stream'
  ): Promise<unknown> {
    if (responseType) {
      switch (responseType) {
        case 'json':
          // Honor the actual response Content-Type when it contradicts the
          // spec-declared responseType. A server may declare application/json
          // in the OpenAPI document but actually return text/plain or
          // text/html. In that case, return the raw text instead of forcing
          // JSON parsing (which would throw a SyntaxError on non-JSON bodies).
          return this.parseJson(response);
        case 'text':
          return response.text();
        case 'blob':
          return response.blob();
        case 'arrayBuffer':
          return response.arrayBuffer();
        case 'stream':
          return response.body;
      }
    }

    const contentType = response.headers.get('content-type') ?? '';

    if (contentType.includes('application/json')) {
      return this.parseJson(response);
    }

    if (contentType.startsWith('text/')) {
      return response.text();
    }

    if (contentType.length === 0) {
      return undefined;
    }

    return response.blob();
  }

  /**
   * Safely parses a JSON response body.
   *
   * - An empty body (e.g. a 200 with Content-Type: application/json but no
   *   content) returns undefined instead of throwing a SyntaxError.
   * - If the actual response Content-Type is not JSON (e.g. a server returns
   *   text/plain or text/html despite the spec declaring application/json),
   *   the raw text is returned without attempting JSON.parse.
   * - As a last line of defense, if JSON.parse still fails (e.g. a JSON
   *   Content-Type header with a non-JSON body), the raw text is returned
   *   instead of throwing a SyntaxError.
   */
  private async parseJson(response: Response): Promise<unknown> {
    const contentType = response.headers.get('content-type') ?? '';
    if (contentType.length > 0 && !contentType.includes('json')) {
      // The server returned a non-JSON content type (e.g. text/plain, text/html,
      // image/png) despite the spec declaring application/json. Return the raw
      // text instead of forcing JSON parsing (which would throw a SyntaxError).
      const text = await response.text();
      return text.length > 0 ? text : undefined;
    }
    const text = await response.text();
    if (text.length === 0) {
      return undefined;
    }
    try {
      return transformDates(JSON.parse(text));
    } catch {
      // The body claims to be JSON but is not valid JSON. Return the raw text
      // so callers receive something usable instead of a SyntaxError.
      return text;
    }
  }

  private buildUrl(
    path: string,
    query?: Record<string, unknown | QueryParamOptions>
  ): string {
    const url = new URL(path, this.baseUrl);

    for (const [key, raw] of Object.entries(query ?? {})) {
      if (raw === undefined || raw === null) {
        continue;
      }

      // Check if the value is wrapped with serialization metadata.
      const isWrapped =
        typeof raw === 'object' &&
        raw !== null &&
        !Array.isArray(raw) &&
        'value' in raw &&
        'style' in raw;

      if (isWrapped) {
        const opts = raw as QueryParamOptions;
        if (opts.value === undefined || opts.value === null) {
          continue;
        }
        this.appendQueryParam(url, key, opts.value, opts.style, opts.explode);
      } else {
        this.appendQueryParam(url, key, raw, 'form', true);
      }
    }

    return url.toString();
  }

  /**
   * Appends a query parameter using the specified OpenAPI style/explode.
   *
   * - form + explode:true  → key=val1&key=val2 (repeated keys)
   * - form + explode:false → key=val1,val2 (comma-separated)
   * - spaceDelimited + explode:false → key=val1%20val2
   * - spaceDelimited + explode:true  → key=val1&key=val2
   * - pipeDelimited + explode:false  → key=val1|val2
   * - pipeDelimited + explode:true   → key=val1&key=val2
   * - deepObject (explode:true only)  → key[prop]=val
   */
  private appendQueryParam(
    url: URL,
    key: string,
    value: unknown,
    style: 'form' | 'spaceDelimited' | 'pipeDelimited' | 'deepObject',
    explode: boolean
  ): void {
    if (Array.isArray(value)) {
      if (explode) {
        for (const item of value) {
          url.searchParams.append(key, String(item));
        }
      } else {
        const sep =
          style === 'spaceDelimited'
            ? ' '
            : style === 'pipeDelimited'
              ? '|'
              : ',';
        url.searchParams.set(key, value.map((v) => String(v)).join(sep));
      }
    } else if (
      typeof value === 'object' &&
      value !== null &&
      style === 'deepObject' &&
      explode
    ) {
      for (const [prop, val] of Object.entries(value)) {
        if (val !== undefined && val !== null) {
          url.searchParams.append(\`\${key}[\${prop}]\`, String(val));
        }
      }
    } else {
      url.searchParams.set(key, String(value));
    }
  }
}
"
`;

exports[`generated example output snapshots > matches snapshot for date-utils.ts > date-utils.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

/**
 * Recursively converts ISO-8601 date-time strings into Date instances.
 *
 * Walks arrays and plain objects. Values that are already Date instances,
 * or strings that do not match the ISO-8601 date-time pattern, are
 * returned unchanged. Invalid dates (e.g. from a matching string that
 * Date cannot parse) fall back to the original string.
 */
export function transformDates(body: unknown): unknown {
  if (body === null || body === undefined) {
    return body;
  }

  if (body instanceof Date) {
    return body;
  }

  if (typeof body === 'string') {
    if (ISO_DATE_TIME.test(body)) {
      const date = new Date(body);
      return Number.isNaN(date.getTime()) ? body : date;
    }
    return body;
  }

  if (Array.isArray(body)) {
    return body.map(transformDates);
  }

  if (typeof body === 'object') {
    const result: Record<string, unknown> = {};
    for (const [key, value] of Object.entries(
      body as Record<string, unknown>
    )) {
      result[key] = transformDates(value);
    }
    return result;
  }

  return body;
}

/**
 * Matches full ISO-8601 date-time strings with an optional time component,
 * optional fractional seconds, and a timezone designator (Z or ±HH:MM).
 *
 * Examples that match:
 *   2026-07-15T12:00:00Z
 *   2026-07-15T12:00:00.123Z
 *   2026-07-15T12:00:00+02:00
 *   2026-07-15T12:00:00
 *
 * Pure date-only strings (2026-07-15) are intentionally NOT matched to
 * avoid false positives on non-date string fields.
 */
const ISO_DATE_TIME =
  /^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?(Z|[+-]\\d{2}:\\d{2})?$/;
"
`;

exports[`generated example output snapshots > matches snapshot for index.ts > index.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export * from './providers';
export * from './api-error';
export * from './api-fetch-client';
export * from './signal-utils';
export * from './mutation-utils';
export * from './date-utils';
export * from './models';
export * from './resources';
"
`;

exports[`generated example output snapshots > matches snapshot for models/create-user-request.ts > models/create-user-request.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface CreateUserRequest {
  name: string;
  email: string;
  role: 'admin' | 'user';
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/error-response.ts > models/error-response.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface ErrorResponse {
  code: string;
  message: string;
  details?: Record<string, unknown> | null;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/index.ts > models/index.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export * from './user';
export * from './create-user-request';
export * from './upload-user-avatar-request';
export * from './user-list-response';
export * from './pagination';
export * from './error-response';
export * from './upload-user-avatar-request2';
export * from './upload-user-avatar-response';
"
`;

exports[`generated example output snapshots > matches snapshot for models/pagination.ts > models/pagination.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface Pagination {
  total: number;
  limit: number;
  offset: number;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/upload-user-avatar-request.ts > models/upload-user-avatar-request.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface UploadUserAvatarRequest {
  file: Blob;
  caption?: string;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/upload-user-avatar-request2.ts > models/upload-user-avatar-request2.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface UploadUserAvatarRequest2 {
  file: Blob;
  caption?: string;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/upload-user-avatar-response.ts > models/upload-user-avatar-response.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface UploadUserAvatarResponse {
  url?: string;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/user.ts > models/user.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export interface User {
  id: string;
  name: string;
  email: string;
  status: 'active' | 'invited' | 'disabled';
  role: 'admin' | 'user';
  createdAt: string;
}
"
`;

exports[`generated example output snapshots > matches snapshot for models/user-list-response.ts > models/user-list-response.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import { Pagination, User } from './index';

export interface UserListResponse {
  data: User[];
  pagination: Pagination;
}
"
`;

exports[`generated example output snapshots > matches snapshot for mutation-utils.ts > mutation-utils.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import { Signal, signal, computed } from '@angular/core';

export type MutationStatus = 'idle' | 'loading' | 'success' | 'error';

export interface Mutation<TBody, TResult> {
  readonly result: Signal<TResult | undefined>;
  readonly error: Signal<unknown | undefined>;
  readonly status: Signal<MutationStatus>;
  readonly isLoading: Signal<boolean>;
  mutate(body: TBody, signal?: AbortSignal): Promise<TResult>;
  reset(): void;
}

export function createMutation<TBody, TResult>(
  fn: (body: TBody, signal?: AbortSignal) => Promise<TResult>
): Mutation<TBody, TResult> {
  const result = signal<TResult | undefined>(undefined);
  const error = signal<unknown | undefined>(undefined);
  const status = signal<MutationStatus>('idle');
  const isLoading = computed(() => status() === 'loading');

  async function mutate(body: TBody, signal?: AbortSignal): Promise<TResult> {
    status.set('loading');
    error.set(undefined);
    try {
      const res = await fn(body, signal);
      result.set(res);
      status.set('success');
      return res;
    } catch (e) {
      error.set(e);
      status.set('error');
      throw e;
    }
  }

  function reset(): void {
    result.set(undefined);
    error.set(undefined);
    status.set('idle');
  }

  return { result, error, status, isLoading, mutate, reset };
}
"
`;

exports[`generated example output snapshots > matches snapshot for providers.ts > providers.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import {
  EnvironmentProviders,
  InjectionToken,
  Provider,
  makeEnvironmentProviders
} from '@angular/core';
import { toApiError, ApiError } from './api-error';

export const NG_OPENAPI_SIGNALS_BASE_PATH = new InjectionToken<string>(
  'NG_OPENAPI_SIGNALS_BASE_PATH'
);

/**
 * Multi-provider InjectionToken for fetch middleware.
 *
 * Middleware can be registered from any feature module via:
 *
 * \`\`\`ts
 * { provide: NG_OPENAPI_SIGNALS_MIDDLEWARE, multi: true, useClass: LoggingMiddleware }
 * { provide: NG_OPENAPI_SIGNALS_MIDDLEWARE, multi: true, useValue: myFnMiddleware }
 * \`\`\`
 *
 * Class-based middleware are instantiated by Angular DI, so they can inject
 * services via constructor injection. The convenience array passed to
 * \`provideNgOpenapiSignals({ middleware: [...] })\` is flattened into the same
 * multi-provider stream, preserving registration order.
 */
export const NG_OPENAPI_SIGNALS_MIDDLEWARE = new InjectionToken<
  ReadonlyArray<ApiMiddlewareEntry>
>('NG_OPENAPI_SIGNALS_MIDDLEWARE', {
  factory: () => []
});

export const NG_OPENAPI_SIGNALS_AUTH = new InjectionToken<
  ApiAuthHook | undefined
>('NG_OPENAPI_SIGNALS_AUTH');

export const NG_OPENAPI_SIGNALS_DEFAULT_HEADERS = new InjectionToken<
  Record<string, string>
>('NG_OPENAPI_SIGNALS_DEFAULT_HEADERS');

export const NG_OPENAPI_SIGNALS_ERROR_MAPPER =
  new InjectionToken<ApiErrorMapper>('NG_OPENAPI_SIGNALS_ERROR_MAPPER');

export const NG_OPENAPI_SIGNALS_REQUEST_HOOK = new InjectionToken<
  ApiRequestHook | undefined
>('NG_OPENAPI_SIGNALS_REQUEST_HOOK');

export const NG_OPENAPI_SIGNALS_RESPONSE_HOOK = new InjectionToken<
  ApiResponseHook | undefined
>('NG_OPENAPI_SIGNALS_RESPONSE_HOOK');

/**
 * A fetch middleware function in onion-style: receives the request context
 * and a \`next\` function that calls the next middleware (or the core fetch).
 * Can mutate the request, short-circuit, transform the response, or handle errors.
 */
export type ApiMiddlewareFn = (
  request: ApiRequestContext,
  next: () => Promise<Response>
) => Promise<Response>;

/**
 * Class-based fetch middleware. Implementations are decorated with
 * \`@Injectable()\` (or \`@Service()\`) and registered via Angular DI:
 *
 * \`\`\`ts
 * @Injectable()
 * class LoggingMiddleware implements ApiMiddleware {
 *   constructor(private auth: AuthService) {}
 *   async handle(request: ApiRequestContext, next: () => Promise<Response>) {
 *     // ...
 *   }
 * }
 *
 * { provide: NG_OPENAPI_SIGNALS_MIDDLEWARE, multi: true, useClass: LoggingMiddleware }
 * \`\`\`
 *
 * The runtime dispatches via \`typeof mw === 'function'\`: functions are
 * called directly as \`ApiMiddlewareFn\`, objects are treated as class
 * instances and \`handle()\` is invoked. Do not add a \`handle\` property to
 * a function middleware to avoid ambiguity.
 */
export interface ApiMiddleware {
  handle(
    request: ApiRequestContext,
    next: () => Promise<Response>
  ): Promise<Response>;
}

/**
 * Either a function-based or class-based middleware entry. The pipeline
 * dispatches via \`typeof mw === 'function'\`: functions are called as
 * \`ApiMiddlewareFn\`, objects have their \`handle()\` method invoked.
 */
export type ApiMiddlewareEntry = ApiMiddlewareFn | ApiMiddleware;

/**
 * Hook that returns additional headers to merge into every request.
 * Called once per request. Useful for auth tokens that may rotate.
 */
export type ApiAuthHook = () =>
  Record<string, string> | Promise<Record<string, string>>;

/**
 * Maps a non-OK \`Response\` to an error. Defaults to \`toApiError\`.
 */
export type ApiErrorMapper = (
  response: Response
) => Promise<ApiError | Error> | ApiError | Error;

/**
 * Called before the middleware pipeline runs. Can mutate the request context
 * (e.g. add headers, change the URL). Return value is ignored.
 */
export type ApiRequestHook = (
  request: ApiRequestContext
) => void | Promise<void>;

/**
 * Called after a successful response is received, before the body is parsed.
 * Receives a cloned \`Response\` so the hook can inspect the body without
 * interfering with the runtime's subsequent body parsing.
 * Return value is ignored.
 *
 * Note: the clone is a one-shot — if you call .json()/.text()/.blob() on it,
 * do so only once. The original response is read by the runtime afterwards.
 */
export type ApiResponseHook = (response: Response) => void | Promise<void>;

export interface ApiRequestContext {
  url: string;
  init: RequestInit;
}

export interface NgOpenapiSignalsOptions {
  basePath: string;
  /**
   * Convenience array of function-based middleware. Entries are registered
   * as \`multi: true\` providers on \`NG_OPENAPI_SIGNALS_MIDDLEWARE\`,
   * preserving their order relative to any class-based providers declared
   * in other feature modules. For class-based middleware with constructor
   * DI, register them separately:
   *
   * \`\`\`ts
   * { provide: NG_OPENAPI_SIGNALS_MIDDLEWARE, multi: true, useClass: MyMiddleware }
   * \`\`\`
   */
  middleware?: ReadonlyArray<ApiMiddlewareFn>;
  auth?: ApiAuthHook;
  defaultHeaders?: Record<string, string>;
  errorMapper?: ApiErrorMapper;
  onRequest?: ApiRequestHook;
  onResponse?: ApiResponseHook;
}

function middlewareProviders(
  middleware?: ReadonlyArray<ApiMiddlewareFn>
): Provider[] {
  return (middleware ?? []).map((mw) => ({
    provide: NG_OPENAPI_SIGNALS_MIDDLEWARE,
    multi: true,
    useValue: mw
  }));
}

export function provideNgOpenapiSignals(
  options: NgOpenapiSignalsOptions
): EnvironmentProviders {
  return makeEnvironmentProviders([
    {
      provide: NG_OPENAPI_SIGNALS_BASE_PATH,
      useValue: options.basePath
    },
    ...middlewareProviders(options.middleware),
    {
      provide: NG_OPENAPI_SIGNALS_AUTH,
      useValue: options.auth
    },
    {
      provide: NG_OPENAPI_SIGNALS_DEFAULT_HEADERS,
      useValue: { ...{}, ...options.defaultHeaders }
    },
    {
      provide: NG_OPENAPI_SIGNALS_ERROR_MAPPER,
      useValue: options.errorMapper ?? toApiError
    },
    {
      provide: NG_OPENAPI_SIGNALS_REQUEST_HOOK,
      useValue: options.onRequest
    },
    {
      provide: NG_OPENAPI_SIGNALS_RESPONSE_HOOK,
      useValue: options.onResponse
    }
  ]);
}
"
`;

exports[`generated example output snapshots > matches snapshot for resources/index.ts > resources/index.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

export * from './users.api';
"
`;

exports[`generated example output snapshots > matches snapshot for resources/users.api.ts > resources/users.api.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import { Service, inject, resource } from '@angular/core';
import { ApiFetchClient } from '../api-fetch-client';
import { MaybeSignal, readSignalOrValue } from '../signal-utils';
import { Mutation, createMutation } from '../mutation-utils';
import {
  CreateUserRequest,
  UploadUserAvatarRequest2,
  UploadUserAvatarResponse,
  User,
  UserListResponse
} from '../models';

@Service()
export class UsersApi {
  private readonly client = inject(ApiFetchClient);

  searchUsersResource(params: {
    q?: MaybeSignal<string>;
    status?: MaybeSignal<'active' | 'invited' | 'disabled'>;
    limit?: MaybeSignal<number>;
  }) {
    return resource({
      params: ():
        | {
            q?: string | undefined;
            status?: 'active' | 'invited' | 'disabled' | undefined;
            limit?: number | undefined;
          }
        | undefined => ({
        q: readSignalOrValue(params.q),
        status: readSignalOrValue(params.status),
        limit: readSignalOrValue(params.limit)
      }),
      loader: ({
        params,
        abortSignal
      }: {
        params: {
          q?: string | undefined;
          status?: 'active' | 'invited' | 'disabled' | undefined;
          limit?: number | undefined;
        };
        abortSignal: AbortSignal;
      }) =>
        this.client.request<UserListResponse>({
          method: 'GET',
          path: \`/users\`,
          query: {
            q: params.q,
            status: params.status,
            limit: params.limit
          },
          responseType: 'json',
          signal: abortSignal
        })
    });
  }

  createUser(body: CreateUserRequest, signal?: AbortSignal): Promise<User> {
    return this.client.request<User>({
      method: 'POST',
      path: '/users',
      body,
      responseType: 'json',
      signal
    });
  }

  createUserMutation(): Mutation<CreateUserRequest, User> {
    return createMutation<CreateUserRequest, User>(
      (mutationBody, mutationSignal) =>
        this.createUser(mutationBody, mutationSignal)
    );
  }

  getUserByIdResource(params: { id: MaybeSignal<string> }) {
    return resource({
      params: ():
        | {
            id: string;
          }
        | undefined =>
        readSignalOrValue(params.id) === undefined
          ? undefined
          : {
              id: readSignalOrValue(params.id)
            },
      loader: ({
        params,
        abortSignal
      }: {
        params: {
          id: string;
        };
        abortSignal: AbortSignal;
      }) =>
        this.client.request<User>({
          method: 'GET',
          path: \`/users/\${encodeURIComponent(String(params.id))}\`,
          responseType: 'json',
          signal: abortSignal
        })
    });
  }

  getUserAvatarResource(params: { id: MaybeSignal<string> }) {
    return resource({
      params: ():
        | {
            id: string;
          }
        | undefined =>
        readSignalOrValue(params.id) === undefined
          ? undefined
          : {
              id: readSignalOrValue(params.id)
            },
      loader: ({
        params,
        abortSignal
      }: {
        params: {
          id: string;
        };
        abortSignal: AbortSignal;
      }) =>
        this.client.request<Blob>({
          method: 'GET',
          path: \`/users/\${encodeURIComponent(String(params.id))}/avatar\`,
          responseType: 'blob',
          signal: abortSignal
        })
    });
  }

  uploadUserAvatar(
    body: UploadUserAvatarRequest2,
    params: {
      id: MaybeSignal<string>;
    },
    signal?: AbortSignal
  ): Promise<UploadUserAvatarResponse> {
    return this.client.request<UploadUserAvatarResponse>({
      method: 'POST',
      path: \`/users/\${encodeURIComponent(String(params.id))}/avatar\`,
      formData: body,
      contentType: 'multipart/form-data',
      responseType: 'json',
      signal
    });
  }

  uploadUserAvatarMutation(params: {
    id: MaybeSignal<string>;
  }): Mutation<UploadUserAvatarRequest2, UploadUserAvatarResponse> {
    return createMutation<UploadUserAvatarRequest2, UploadUserAvatarResponse>(
      (mutationBody, mutationSignal) =>
        this.uploadUserAvatar(
          mutationBody,
          {
            id: readSignalOrValue(params.id)
          },
          mutationSignal
        )
    );
  }

  searchUsersByTagsResource(params: {
    tags?: MaybeSignal<string[]>;
    'X-Request-Id'?: MaybeSignal<string>;
  }) {
    return resource({
      params: ():
        | {
            tags?: string[] | undefined;
            'X-Request-Id'?: string | undefined;
          }
        | undefined => ({
        tags: readSignalOrValue(params.tags),
        'X-Request-Id': readSignalOrValue(params['X-Request-Id'])
      }),
      loader: ({
        params,
        abortSignal
      }: {
        params: {
          tags?: string[] | undefined;
          'X-Request-Id'?: string | undefined;
        };
        abortSignal: AbortSignal;
      }) =>
        this.client.request<User[]>({
          method: 'GET',
          path: \`/users/search\`,
          query: {
            tags: {
              value: params.tags,
              style: 'spaceDelimited',
              explode: false
            }
          },
          headers: {
            'X-Request-Id': params['X-Request-Id']
          },
          responseType: 'json',
          signal: abortSignal
        })
    });
  }

  getUserEventsResource() {
    return resource({
      loader: ({ abortSignal }: { abortSignal: AbortSignal }) =>
        this.client.request<ReadableStream>({
          method: 'GET',
          path: '/users/events',
          responseType: 'stream',
          signal: abortSignal
        })
    });
  }
}
"
`;

exports[`generated example output snapshots > matches snapshot for signal-utils.ts > signal-utils.ts 1`] = `
"// Auto-generated by ng-openapi-signals.
// Do not edit manually.

import { Signal, isSignal } from '@angular/core';

export type MaybeSignal<T> = T | Signal<T>;

export function readSignalOrValue<T>(value: MaybeSignal<T>): T {
  return isSignal(value) ? value() : value;
}
"
`;
